# game_of_life_cuda

./: .gitignore  CMakeLists.txt  Makefile  life.c  life.cu  life_cuda_GM.cu  life_cuda_GM.sh  life_cuda_SM.cu  life_cuda_SM.sh  life_cuda_pitch.cu  life_cuda_pitch.sh  life_serial.c  submit.sh
